--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "framer-motion": "^10.10.0",
+    "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^10.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
