--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^10.11.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
