wip: home development

--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/aleo": "^4.5.9",
+    "@fontsource/alex-brush": "^4.5.10",
+    "@fontsource/fira-sans": "^4.5.10",
+    "@fontsource/hanuman": "^4.5.11",
+    "@fontsource/open-sans": "^4.5.14",
+    "@fontsource/oxygen": "^4.5.9",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^10.11.5",
     "react": "^18.2.0",
