--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -23,7 +24,7 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/oxygen": "^4.5.9",
     "@types/react-router-dom": "^5.3.3",
-    "framer-motion": "^10.11.5",
+    "framer-motion": "^10.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
