--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/oxygen": "^4.5.9",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.10",
     "framer-motion": "^10.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
