--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "template-landing",
   "description": "This is a boilerplate build with Vite, React 18, TypeScript, Vitest, Testing Library, TailwindCSS 3, Eslint and Prettier.",
   "version": "0.1.0",
+  "homepage": "github-page/",
   "private": true,
   "scripts": {
     "dev": "vite",
